--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://use.fontawesome.com/0645b0ef8b.js"></script>
 		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/bootstrap.min.css">
 		<script src="vendor/bootstrap/bootstrap.min.js"></script>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
