--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" type="text/css"  href="vendor/owlcarousel/owl.theme.default.min.css">
 	</head>
 	<body>
-		<i class="fa fa-facebook" aria-hidden="true"></i>
+		<!-- <i class="fa fa-facebook" aria-hidden="true"></i> -->
 		<!-----==============================header section============----------->
 		<header id="header" class="">
 			<div class="container">
@@ -278,7 +278,7 @@
                     <h6 class="r2">
                         follow us
                     </h6>
-                    <div class='social_icon_group align_center disp_flex    flex_wrap '>
+                    <div class='social_icon_group align_center disp_flex flex_wrap '>
                         <div class='icon position_relative align_center social fb color_fb_icon'><a
                                 href="https://www.facebook.com/" target="_blank"><i
                                     class='fa fb fa-facebook'></i></a>
